--- a/.github/workflows/charts-lint.yaml
+++ b/.github/workflows/charts-lint.yaml
@@ -51,4 +51,4 @@ jobs:
 
       - name: Run chart-testing (install)
         if: steps.list-changed.outputs.changed == 'true'
-        run: ct install --config .github/linters/ct.yaml
+        run: ct install --config .github/linters/ct.yaml --helm-extra-set-args='--set=image.repository=ghcr.io/demeesterdev/cert-manager-webhook-transip'
