--- a/charts/cert-manager-webhook-transip/values.yaml
+++ b/charts/cert-manager-webhook-transip/values.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=values.schema.json
 # The GroupName here is used to identify your company or business unit that
 # created this webhook.
 # For example, this may be "acme.mycompany.com".
