--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+bin/
 
 # Test binary, built with `go test -c`
 *.test
@@ -17,9 +18,19 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# Ignore the built binary and files
+
+/cert-manager-webhook-transip
+apiserver.local.config/*
+
 # Go workspace file
 go.work
 go.work.sum
 
 # env file
 .env
+
+# Make artifacts
+
+\_out
+\_test
