--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ run-name: Build ${{ github.ref_name }}
 on:
   push:
     branches:
-      - master
+      - main
     tags:
       - 'v*'
   pull_request:
