--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -4,7 +4,7 @@ run-name: Lint Go ${{ github.ref_name }}
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     paths:
       - "**.go"
