--- a/.github/workflows/charts-lint.yaml
+++ b/.github/workflows/charts-lint.yaml
@@ -43,6 +43,7 @@ jobs:
         uses: helm/kind-action@v1.8.0
 
       - name: Install cert-manager
+        if: steps.list-changed.outputs.changed == 'true'
         run: |
           kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.15.2/cert-manager.yaml
           kubectl wait --timeout=5m --for=condition=available deployment cert-manager -n cert-manager
